Fix logo aspect ratio, increase size, left-align header, make title h1 with pink color

--- a/static/style.css
+++ b/static/style.css
@@ -110,7 +110,7 @@ header {
 }
 
 .header-content > div {
-    text-align: center;
+    text-align: left;
     flex: 1;
 }
 
@@ -137,16 +137,17 @@ header {
 
 .logo .symbol img {
     display: block;
-    width: 2em;
-    height: 2em;
+    width: 3.5em;
+    height: auto;
 }
 
-.logo .title {
+.logo h1 {
     font-size: 2.75em;
     font-weight: 700;
     line-height: 1.3;
     letter-spacing: -0.035em;
-    color: var(--primary-color);
+    color: var(--secondary-color);
+    margin: 0;
 }
 
 h1 {
